--- a/backend/themes/main/css/style.css
+++ b/backend/themes/main/css/style.css
@@ -1,20 +1,3 @@
 body {
-  background-color: #f5f5f5;
-}
-
-.custom-button {
-  background-color: #6200ea;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 8px;
-}
-
-
-.custom-tabs {
-  font-size: 12px; /* Уменьшаем шрифт табов */
-}
-
-.custom-tabs .v-tab {
-  min-width: auto; /* Чтобы табы могли ужиматься */
-  padding: 0 8px; /* Меньше отступов */
+  /*background-color: #f5f5f5;*/
 }
