--- a/backend/themes/main/templates/about.html
+++ b/backend/themes/main/templates/about.html
@@ -1,5 +1,6 @@
 <script type="text/x-template" id="about-template">
     <v-container>
+        <h3>About AKM tracker</h3>
         <v-col>
             <p style="font-size: 20px; font-weight: 600; margin: 0;">
                 About AKM Tracker
