--- a/backend/themes/main/templates/domains.html
+++ b/backend/themes/main/templates/domains.html
@@ -1,5 +1,6 @@
 <script type="text/x-template" id="domains-template">
     <v-container>
+        <h3>Domains</h3>
         <v-data-table
                 :headers="headers"
                 :items="domains"
@@ -92,6 +93,3 @@
     });
 
 </script>
-
-<!-- Вставка компонента -->
-<domains-component></domains-component>
