--- a/backend/themes/main/templates/landings.html
+++ b/backend/themes/main/templates/landings.html
@@ -1,29 +1,34 @@
-<script type="text/x-template" id="about-template">
+{% raw %}
+<script type="text/x-template" id="landings-template">
     <v-container fluid>
-        <h3>About AKM tracker</h3>
-        <p class="mt-4">
-            AKM tracker is a web application designed to help you manage and track your affiliate marketing campaigns.
-            It provides a user-friendly interface for managing offers, sources, reports, and domains.
-            The application is built using modern web technologies, including Vue.js and Vuetify, to ensure a smooth
-            and responsive user experience.
-        </p>
-        <p>
-            The application is designed to be easy to use, with a clean and intuitive interface that allows you to
-            quickly navigate through different sections. You can easily add, edit, and delete offers, sources, and
-            domains, as well as view detailed reports on your campaigns' performance.
-        </p>
+        <h2>Landing Pages</h2>
+
+
+        <v-row dense class="mt-4">
+            <v-col>
+                <v-card>
+                    <v-data-table
+                            :headers="headers"
+                            :items="desserts"
+                            :items-per-page="5"
+                            class="elevation-1"
+                    ></v-data-table>
+                </v-card>
+            </v-col>
+        </v-row>
     </v-container>
 </script>
 
 <script type="application/javascript">
-    Vue.component('about-component', {
-        template: '#about-template',
+    Vue.component('landings-component', {
+        template: '#landings-template',
         data() {
             return {
                 headers: [
                     {
                         text: 'Dessert (100g serving)',
                         align: 'start',
+                        sortable: false,
                         value: 'name',
                     },
                     {text: 'Calories', value: 'calories'},
@@ -114,9 +119,14 @@
                         iron: 6,
                     },
                 ],
+
             }
-        }
+        },
+        computed: {
+            dateRangeText() {
+                return this.date_range.join(' ~ ')
+            },
+        },
     });
 </script>
-
-<about-component></about-component>
+{% endraw %}
